Revert "完善标签翻译"
This reverts commit 3d9255019176333df7a042889d557735b034f9cf.

--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -65,169 +65,5 @@
 
   "modmenu.nameTranslation.extshape": "Extended Block Shapes",
 
-  "options.extshape.addToVanillaGroups.blockus": "Please note: to find the extended shapes of blocks in Blockus mod in the creative inventory, you have to enable \"Add To Vanilla Groups\". The blocks only display in item groups of Blockus. There are no specific groups for extended shapes of blocks in Blockus mod.",
-
-  "tag.block.extshape.pickaxe_unmineable": "Pickaxe unmineable",
-
-  "tag.block.extshape.woolen_blocks": "Woolen Blocks",
-  "tag.block.extshape.wooden_blocks": "Wooden Blocks",
-  "tag.block.extshape.log_blocks": "Log Blocks",
-
-  "tag.block.extshape.log_stairs": "Log Stairs",
-  "tag.block.extshape.woolen_stairs": "Woolen Stairs",
-  "tag.block.extshape.concrete_stairs": "Concrete Stairs",
-  "tag.block.extshape.terracotta_stairs": "Terracotta Stairs",
-  "tag.block.extshape.stained_terracotta_stairs": "Stained Terracotta Stairs",
-
-  "tag.block.extshape.log_slabs": "Log Slabs",
-  "tag.block.extshape.woolen_slabs": "Woolen Slabs",
-  "tag.block.extshape.concrete_slabs": "Concrete Slabs",
-  "tag.block.extshape.terracotta_slabs": "Terracotta Slabs",
-  "tag.block.extshape.stained_terracotta_slabs": "Stained Terracotta Slabs",
-  "tag.block.extshape.glazed_terracotta_slabs": "Glazed Terracotta Slabs",
-
-  "tag.block.extshape.log_fences": "Log Fences",
-  "tag.block.extshape.woolen_fences": "Woolen Fences",
-  "tag.block.extshape.concrete_fences": "Concrete Fences",
-  "tag.block.extshape.terracotta_fences": "Terracotta Fences",
-  "tag.block.extshape.stained_terracotta_fences": "Stained Terracotta Fences",
-
-  "tag.block.extshape.log_fence_gates": "Log Fence Gates",
-  "tag.block.extshape.woolen_fence_gates": "Woolen Fence Gates",
-  "tag.block.extshape.concrete_fence_gates": "Concrete Fence Gates",
-  "tag.block.extshape.terracotta_fence_gates": "Terracotta Fence Gates",
-  "tag.block.extshape.stained_terracotta_fence_gates": "Stained Terracotta Fence Gates",
-
-  "tag.block.extshape.log_walls": "Log Walls",
-  "tag.block.extshape.wooden_walls": "Wooden Walls",
-  "tag.block.extshape.woolen_walls": "Woolen Walls",
-  "tag.block.extshape.concrete_walls": "Concrete Walls",
-  "tag.block.extshape.terracotta_walls": "Terracotta Walls",
-  "tag.block.extshape.stained_terracotta_walls": "Stained Terracotta Walls",
-
-  "tag.block.extshape.log_buttons": "Log Buttons",
-  "tag.block.extshape.woolen_buttons": "Woolen Buttons",
-  "tag.block.extshape.concrete_buttons": "Concrete Buttons",
-  "tag.block.extshape.terracotta_buttons": "Terracotta Buttons",
-  "tag.block.extshape.stained_terracotta_buttons": "Stained Terracotta Buttons",
-
-  "tag.block.extshape.log_pressure_plates": "Log Pressure Plates",
-  "tag.block.extshape.woolen_pressure_plates": "Woolen Pressure Plates",
-  "tag.block.extshape.concrete_pressure_plates": "Concrete Pressure Plates",
-  "tag.block.extshape.terracotta_pressure_plates": "Terracotta Pressure Plates",
-  "tag.block.extshape.stained_terracotta_pressure_plates": "Stained Terracotta Pressure Plates",
-
-  "tag.block.extshape.vertical_slabs": "Vertical Slabs",
-  "tag.block.extshape.wooden_vertical_slabs": "Woolen Vertical Slabs",
-  "tag.block.extshape.log_vertical_slabs": "Log Vertical Slabs",
-  "tag.block.extshape.woolen_vertical_slabs": "Woolen Vertical Slabs",
-  "tag.block.extshape.concrete_vertical_slabs": "Concrete Vertical Slabs",
-  "tag.block.extshape.terracotta_vertical_slabs": "Terracotta Vertical Slabs",
-  "tag.block.extshape.stained_terracotta_vertical_slabs": "Stained Terracotta Vertical Slabs",
-
-  "tag.block.extshape.quarter_pieces": "Quarter Pieces",
-  "tag.block.extshape.wooden_quarter_pieces": "Woolen Quarter Pieces",
-  "tag.block.extshape.log_quarter_pieces": "Log Quarter Pieces",
-  "tag.block.extshape.woolen_quarter_pieces": "Woolen Quarter Pieces",
-  "tag.block.extshape.concrete_quarter_pieces": "Concrete Quarter Pieces",
-  "tag.block.extshape.terracotta_quarter_pieces": "Terracotta Quarter Pieces",
-  "tag.block.extshape.stained_terracotta_quarter_pieces": "Stained Terracotta Quarter Pieces",
-
-  "tag.block.extshape.vertical_stairs": "Vertical Stairs",
-  "tag.block.extshape.wooden_vertical_stairs": "Woolen Vertical Stairs",
-  "tag.block.extshape.log_vertical_stairs": "Log Vertical Stairs",
-  "tag.block.extshape.woolen_vertical_stairs": "Woolen Vertical Stairs",
-  "tag.block.extshape.concrete_vertical_stairs": "Concrete Vertical Stairs",
-  "tag.block.extshape.terracotta_vertical_stairs": "Terracotta Vertical Stairs",
-  "tag.block.extshape.stained_terracotta_vertical_stairs": "Stained Terracotta Vertical Stairs",
-
-  "tag.block.extshape.vertical_quarter_pieces": "Vertical Quarter Pieces",
-  "tag.block.extshape.wooden_vertical_quarter_pieces": "Woolen Vertical Quarter Pieces",
-  "tag.block.extshape.log_vertical_quarter_pieces": "Log Vertical Quarter Pieces",
-  "tag.block.extshape.woolen_vertical_quarter_pieces": "Woolen Vertical Quarter Pieces",
-  "tag.block.extshape.concrete_vertical_quarter_pieces": "Concrete Vertical Quarter Pieces",
-  "tag.block.extshape.terracotta_vertical_quarter_pieces": "Terracotta Vertical Quarter Pieces",
-  "tag.block.extshape.stained_terracotta_vertical_quarter_pieces": "Stained Terracotta Vertical Quarter Pieces",
-
-  "tag.item.extshape.woolen_blocks": "Woolen Blocks",
-  "tag.item.extshape.wooden_blocks": "Wooden Blocks",
-  "tag.item.extshape.log_blocks": "Log Blocks",
-
-  "tag.item.extshape.log_stairs": "Log Stairs",
-  "tag.item.extshape.woolen_stairs": "Woolen Stairs",
-  "tag.item.extshape.concrete_stairs": "Concrete Stairs",
-  "tag.item.extshape.terracotta_stairs": "Terracotta Stairs",
-  "tag.item.extshape.stained_terracotta_stairs": "Stained Terracotta Stairs",
-
-  "tag.item.extshape.log_slabs": "Log Slabs",
-  "tag.item.extshape.woolen_slabs": "Woolen Slabs",
-  "tag.item.extshape.concrete_slabs": "Concrete Slabs",
-  "tag.item.extshape.terracotta_slabs": "Terracotta Slabs",
-  "tag.item.extshape.stained_terracotta_slabs": "Stained Terracotta Slabs",
-  "tag.item.extshape.glazed_terracotta_slabs": "Glazed Terracotta Slabs",
-
-  "tag.item.extshape.log_fences": "Log Fences",
-  "tag.item.extshape.woolen_fences": "Woolen Fences",
-  "tag.item.extshape.concrete_fences": "Concrete Fences",
-  "tag.item.extshape.terracotta_fences": "Terracotta Fences",
-  "tag.item.extshape.stained_terracotta_fences": "Stained Terracotta Fences",
-
-  "tag.item.extshape.log_fence_gates": "Log Fence Gates",
-  "tag.item.extshape.woolen_fence_gates": "Woolen Fence Gates",
-  "tag.item.extshape.concrete_fence_gates": "Concrete Fence Gates",
-  "tag.item.extshape.terracotta_fence_gates": "Terracotta Fence Gates",
-  "tag.item.extshape.stained_terracotta_fence_gates": "Stained Terracotta Fence Gates",
-
-  "tag.item.extshape.log_walls": "Log Walls",
-  "tag.item.extshape.wooden_walls": "Wooden Walls",
-  "tag.item.extshape.woolen_walls": "Woolen Walls",
-  "tag.item.extshape.concrete_walls": "Concrete Walls",
-  "tag.item.extshape.terracotta_walls": "Terracotta Walls",
-  "tag.item.extshape.stained_terracotta_walls": "Stained Terracotta Walls",
-
-  "tag.item.extshape.log_buttons": "Log Buttons",
-  "tag.item.extshape.woolen_buttons": "Woolen Buttons",
-  "tag.item.extshape.concrete_buttons": "Concrete Buttons",
-  "tag.item.extshape.terracotta_buttons": "Terracotta Buttons",
-  "tag.item.extshape.stained_terracotta_buttons": "Stained Terracotta Buttons",
-
-  "tag.item.extshape.log_pressure_plates": "Log Pressure Plates",
-  "tag.item.extshape.woolen_pressure_plates": "Woolen Pressure Plates",
-  "tag.item.extshape.concrete_pressure_plates": "Concrete Pressure Plates",
-  "tag.item.extshape.terracotta_pressure_plates": "Terracotta Pressure Plates",
-  "tag.item.extshape.stained_terracotta_pressure_plates": "Stained Terracotta Pressure Plates",
-
-  "tag.item.extshape.vertical_slabs": "Vertical Slabs",
-  "tag.item.extshape.wooden_vertical_slabs": "Woolen Vertical Slabs",
-  "tag.item.extshape.log_vertical_slabs": "Log Vertical Slabs",
-  "tag.item.extshape.woolen_vertical_slabs": "Woolen Vertical Slabs",
-  "tag.item.extshape.concrete_vertical_slabs": "Concrete Vertical Slabs",
-  "tag.item.extshape.terracotta_vertical_slabs": "Terracotta Vertical Slabs",
-  "tag.item.extshape.stained_terracotta_vertical_slabs": "Stained Terracotta Vertical Slabs",
-
-  "tag.item.extshape.quarter_pieces": "Quarter Pieces",
-  "tag.item.extshape.wooden_quarter_pieces": "Woolen Quarter Pieces",
-  "tag.item.extshape.log_quarter_pieces": "Log Quarter Pieces",
-  "tag.item.extshape.woolen_quarter_pieces": "Woolen Quarter Pieces",
-  "tag.item.extshape.concrete_quarter_pieces": "Concrete Quarter Pieces",
-  "tag.item.extshape.terracotta_quarter_pieces": "Terracotta Quarter Pieces",
-  "tag.item.extshape.stained_terracotta_quarter_pieces": "Stained Terracotta Quarter Pieces",
-
-  "tag.item.extshape.vertical_stairs": "Vertical Stairs",
-  "tag.item.extshape.wooden_vertical_stairs": "Woolen Vertical Stairs",
-  "tag.item.extshape.log_vertical_stairs": "Log Vertical Stairs",
-  "tag.item.extshape.woolen_vertical_stairs": "Woolen Vertical Stairs",
-  "tag.item.extshape.concrete_vertical_stairs": "Concrete Vertical Stairs",
-  "tag.item.extshape.terracotta_vertical_stairs": "Terracotta Vertical Stairs",
-  "tag.item.extshape.stained_terracotta_vertical_stairs": "Stained Terracotta Vertical Stairs",
-
-  "tag.item.extshape.vertical_quarter_pieces": "Vertical Quarter Pieces",
-  "tag.item.extshape.wooden_vertical_quarter_pieces": "Woolen Vertical Quarter Pieces",
-  "tag.item.extshape.log_vertical_quarter_pieces": "Log Vertical Quarter Pieces",
-  "tag.item.extshape.woolen_vertical_quarter_pieces": "Woolen Vertical Quarter Pieces",
-  "tag.item.extshape.concrete_vertical_quarter_pieces": "Concrete Vertical Quarter Pieces",
-  "tag.item.extshape.terracotta_vertical_quarter_pieces": "Terracotta Vertical Quarter Pieces",
-  "tag.item.extshape.stained_terracotta_vertical_quarter_pieces": "Stained Terracotta Vertical Quarter Pieces",
-
-  "tags.block.extshape.snow": "Snow"
+  "options.extshape.addToVanillaGroups.blockus": "Please note: to find the extended shapes of blocks in Blockus mod in the creative inventory, you have to enable \"Add To Vanilla Groups\". The blocks only display in item groups of Blockus. There are no specific groups for extended shapes of blocks in Blockus mod."
 }
