--- a/src/main/resources/assets/extshape/lang/ja_jp.json
+++ b/src/main/resources/assets/extshape/lang/ja_jp.json
@@ -6,175 +6,11 @@
   "block.extshape.?_fence": "%sフェンス",
   "block.extshape.?_fence_gate": "%sフェンスゲート",
   "block.extshape.?_pressure_plate": "%s感圧板",
-  "block.extshape.?_quarter_piece": "%s四半ブロック",
+  "block.extshape.?_quarter_piece": "%sクォータブロック",
   "block.extshape.?_slab": "%sハーフブロック",
   "block.extshape.?_stairs": "%s階段",
-  "block.extshape.?_vertical_quarter_piece": "垂直%s四半ブロック",
+  "block.extshape.?_vertical_quarter_piece": "垂直%sクォータブロック",
   "block.extshape.?_vertical_slab": "垂直%sハーフブロック",
   "block.extshape.?_vertical_stairs": "垂直%s階段",
-  "block.extshape.?_wall": "%s塀",
-
-  "tag.block.extshape.pickaxe_unmineable": "ツルハシで採掘出来ない",
-
-  "tag.block.extshape.woolen_blocks": "羊毛のブロック",
-  "tag.block.extshape.wooden_blocks": "木のブロック",
-  "tag.block.extshape.log_blocks": "原木のブロック",
-
-  "tag.block.extshape.log_stairs": "原木の階段",
-  "tag.block.extshape.woolen_stairs": "羊毛の階段",
-  "tag.block.extshape.concrete_stairs": "コンクリートの階段",
-  "tag.block.extshape.terracotta_stairs": "テラコッタの階段",
-  "tag.block.extshape.stained_terracotta_stairs": "色付きテラコッタの階段",
-
-  "tag.block.extshape.log_slabs": "原木のハーフブロック",
-  "tag.block.extshape.woolen_slabs": "羊毛のハーフブロック",
-  "tag.block.extshape.concrete_slabs": "コンクリートのハーフブロック",
-  "tag.block.extshape.terracotta_slabs": "テラコッタのハーフブロック",
-  "tag.block.extshape.stained_terracotta_slabs": "色付きテラコッタのハーフブロック",
-  "tag.block.extshape.glazed_terracotta_slabs": "彩釉テラコッタのハーフブロック",
-
-  "tag.block.extshape.log_fences": "原木のフェンス",
-  "tag.block.extshape.woolen_fences": "羊毛のフェンス",
-  "tag.block.extshape.concrete_fences": "コンクリートのフェンス",
-  "tag.block.extshape.terracotta_fences": "テラコッタのフェンス",
-  "tag.block.extshape.stained_terracotta_fences": "色付きテラコッタのフェンス",
-
-  "tag.block.extshape.log_fence_gates": "原木のフェンスゲート",
-  "tag.block.extshape.woolen_fence_gates": "羊毛のフェンスゲート",
-  "tag.block.extshape.concrete_fence_gates": "コンクリートのフェンスゲート",
-  "tag.block.extshape.terracotta_fence_gates": "テラコッタのフェンスゲート",
-  "tag.block.extshape.stained_terracotta_fence_gates": "色付きテラコッタのフェンスゲート",
-
-  "tag.block.extshape.wooden_walls": "木の塀",
-  "tag.block.extshape.log_walls": "原木の塀",
-  "tag.block.extshape.woolen_walls": "羊毛の塀",
-  "tag.block.extshape.concrete_walls": "コンクリートの塀",
-  "tag.block.extshape.terracotta_walls": "テラコッタの塀",
-  "tag.block.extshape.stained_terracotta_walls": "色付きテラコッタの塀",
-
-  "tag.block.extshape.log_buttons": "原木のボタン",
-  "tag.block.extshape.woolen_buttons": "羊毛のボタン",
-  "tag.block.extshape.concrete_buttons": "コンクリートのボタン",
-  "tag.block.extshape.terracotta_buttons": "テラコッタのボタン",
-  "tag.block.extshape.stained_terracotta_buttons": "色付きテラコッタのボタン",
-
-  "tag.block.extshape.log_pressure_plates": "原木の感圧板",
-  "tag.block.extshape.woolen_pressure_plates": "羊毛の感圧板",
-  "tag.block.extshape.concrete_pressure_plates": "コンクリートの感圧板",
-  "tag.block.extshape.terracotta_pressure_plates": "テラコッタの感圧板",
-  "tag.block.extshape.stained_terracotta_pressure_plates": "色付きテラコッタの感圧板",
-
-  "tag.block.extshape.vertical_slabs": "垂直ハーフブロック",
-  "tag.block.extshape.wooden_vertical_slabs": "垂直木のハーフブロック",
-  "tag.block.extshape.log_vertical_slabs": "垂直原木のハーフブロック",
-  "tag.block.extshape.woolen_vertical_slabs": "垂直羊毛のハーフブロック",
-  "tag.block.extshape.concrete_vertical_slabs": "垂直コンクリートのハーフブロック",
-  "tag.block.extshape.terracotta_vertical_slabs": "垂直テラコッタのハーフブロック",
-  "tag.block.extshape.stained_terracotta_vertical_slabs": "垂直色付きテラコッタのハーフブロック",
-
-  "tag.block.extshape.quarter_pieces": "四半ブロック",
-  "tag.block.extshape.wooden_quarter_pieces": "木の四半ブロック",
-  "tag.block.extshape.log_quarter_pieces": "原木の四半ブロック",
-  "tag.block.extshape.woolen_quarter_pieces": "羊毛の四半ブロック",
-  "tag.block.extshape.concrete_quarter_pieces": "コンクリートの四半ブロック",
-  "tag.block.extshape.terracotta_quarter_pieces": "テラコッタの四半ブロック",
-  "tag.block.extshape.stained_terracotta_quarter_pieces": "色付きテラコッタの四半ブロック",
-
-  "tag.block.extshape.vertical_stairs": "垂直階段",
-  "tag.block.extshape.wooden_vertical_stairs": "木の階段",
-  "tag.block.extshape.log_vertical_stairs": "垂直原木の階段",
-  "tag.block.extshape.woolen_vertical_stairs": "垂直羊毛の階段",
-  "tag.block.extshape.concrete_vertical_stairs": "垂直コンクリートの階段",
-  "tag.block.extshape.terracotta_vertical_stairs": "垂直テラコッタの階段",
-  "tag.block.extshape.stained_terracotta_vertical_stairs": "垂直色付きテラコッタの階段",
-
-  "tag.block.extshape.vertical_quarter_pieces": "垂直四半ブロック",
-  "tag.block.extshape.wooden_vertical_quarter_pieces": "垂直木の四半ブロック",
-  "tag.block.extshape.log_vertical_quarter_pieces": "垂直原木の四半ブロック",
-  "tag.block.extshape.woolen_vertical_quarter_pieces": "垂直羊毛の四半ブロック",
-  "tag.block.extshape.concrete_vertical_quarter_pieces": "垂直コンクリートの四半ブロック",
-  "tag.block.extshape.terracotta_vertical_quarter_pieces": "垂直テラコッタの四半ブロック",
-  "tag.block.extshape.stained_terracotta_vertical_quarter_pieces": "垂直色付きテラコッタの四半ブロック",
-
-  "tag.item.extshape.woolen_blocks": "羊毛のブロック",
-  "tag.item.extshape.wooden_blocks": "木のブロック",
-  "tag.item.extshape.log_blocks": "原木のブロック",
-
-  "tag.item.extshape.log_stairs": "原木の階段",
-  "tag.item.extshape.woolen_stairs": "羊毛の階段",
-  "tag.item.extshape.concrete_stairs": "コンクリートの階段",
-  "tag.item.extshape.terracotta_stairs": "テラコッタの階段",
-  "tag.item.extshape.stained_terracotta_stairs": "色付きテラコッタの階段",
-
-  "tag.item.extshape.log_slabs": "原木のハーフブロック",
-  "tag.item.extshape.woolen_slabs": "羊毛のハーフブロック",
-  "tag.item.extshape.concrete_slabs": "コンクリートのハーフブロック",
-  "tag.item.extshape.terracotta_slabs": "テラコッタのハーフブロック",
-  "tag.item.extshape.stained_terracotta_slabs": "色付きテラコッタのハーフブロック",
-  "tag.item.extshape.glazed_terracotta_slabs": "彩釉テラコッタのハーフブロック",
-
-  "tag.item.extshape.log_fences": "原木のフェンス",
-  "tag.item.extshape.woolen_fences": "羊毛のフェンス",
-  "tag.item.extshape.concrete_fences": "コンクリートのフェンス",
-  "tag.item.extshape.terracotta_fences": "テラコッタのフェンス",
-  "tag.item.extshape.stained_terracotta_fences": "色付きテラコッタのフェンス",
-
-  "tag.item.extshape.log_fence_gates": "原木のフェンスゲート",
-  "tag.item.extshape.woolen_fence_gates": "羊毛のフェンスゲート",
-  "tag.item.extshape.concrete_fence_gates": "コンクリートのフェンスゲート",
-  "tag.item.extshape.terracotta_fence_gates": "テラコッタのフェンスゲート",
-  "tag.item.extshape.stained_terracotta_fence_gates": "色付きテラコッタのフェンスゲート",
-
-  "tag.item.extshape.wooden_walls": "木の塀",
-  "tag.item.extshape.log_walls": "原木の塀",
-  "tag.item.extshape.woolen_walls": "羊毛の塀",
-  "tag.item.extshape.concrete_walls": "コンクリートの塀",
-  "tag.item.extshape.terracotta_walls": "テラコッタの塀",
-  "tag.item.extshape.stained_terracotta_walls": "色付きテラコッタの塀",
-
-  "tag.item.extshape.log_buttons": "原木のボタン",
-  "tag.item.extshape.woolen_buttons": "羊毛のボタン",
-  "tag.item.extshape.concrete_buttons": "コンクリートのボタン",
-  "tag.item.extshape.terracotta_buttons": "テラコッタのボタン",
-  "tag.item.extshape.stained_terracotta_buttons": "色付きテラコッタのボタン",
-
-  "tag.item.extshape.log_pressure_plates": "原木の感圧板",
-  "tag.item.extshape.woolen_pressure_plates": "羊毛の感圧板",
-  "tag.item.extshape.concrete_pressure_plates": "コンクリートの感圧板",
-  "tag.item.extshape.terracotta_pressure_plates": "テラコッタの感圧板",
-  "tag.item.extshape.stained_terracotta_pressure_plates": "色付きテラコッタの感圧板",
-
-  "tag.item.extshape.vertical_slabs": "垂直ハーフブロック",
-  "tag.item.extshape.wooden_vertical_slabs": "垂直木のハーフブロック",
-  "tag.item.extshape.log_vertical_slabs": "垂直原木のハーフブロック",
-  "tag.item.extshape.woolen_vertical_slabs": "垂直羊毛のハーフブロック",
-  "tag.item.extshape.concrete_vertical_slabs": "垂直コンクリートのハーフブロック",
-  "tag.item.extshape.terracotta_vertical_slabs": "垂直テラコッタのハーフブロック",
-  "tag.item.extshape.stained_terracotta_vertical_slabs": "垂直色付きテラコッタのハーフブロック",
-
-  "tag.item.extshape.quarter_pieces": "四半ブロック",
-  "tag.item.extshape.wooden_quarter_pieces": "木の四半ブロック",
-  "tag.item.extshape.log_quarter_pieces": "原木の四半ブロック",
-  "tag.item.extshape.woolen_quarter_pieces": "羊毛の四半ブロック",
-  "tag.item.extshape.concrete_quarter_pieces": "コンクリートの四半ブロック",
-  "tag.item.extshape.terracotta_quarter_pieces": "テラコッタの四半ブロック",
-  "tag.item.extshape.stained_terracotta_quarter_pieces": "色付きテラコッタの四半ブロック",
-
-  "tag.item.extshape.vertical_stairs": "垂直階段",
-  "tag.item.extshape.wooden_vertical_stairs": "木の階段",
-  "tag.item.extshape.log_vertical_stairs": "垂直原木の階段",
-  "tag.item.extshape.woolen_vertical_stairs": "垂直羊毛の階段",
-  "tag.item.extshape.concrete_vertical_stairs": "垂直コンクリートの階段",
-  "tag.item.extshape.terracotta_vertical_stairs": "垂直テラコッタの階段",
-  "tag.item.extshape.stained_terracotta_vertical_stairs": "垂直色付きテラコッタの階段",
-
-  "tag.item.extshape.vertical_quarter_pieces": "垂直四半ブロック",
-  "tag.item.extshape.wooden_vertical_quarter_pieces": "垂直木の四半ブロック",
-  "tag.item.extshape.log_vertical_quarter_pieces": "垂直原木の四半ブロック",
-  "tag.item.extshape.woolen_vertical_quarter_pieces": "垂直羊毛の四半ブロック",
-  "tag.item.extshape.concrete_vertical_quarter_pieces": "垂直コンクリートの四半ブロック",
-  "tag.item.extshape.terracotta_vertical_quarter_pieces": "垂直テラコッタの四半ブロック",
-  "tag.item.extshape.stained_terracotta_vertical_quarter_pieces": "垂直色付きテラコッタの四半ブロック",
-
-  "tags.block.extshape.snow": "雪"
+  "block.extshape.?_wall": "%s塀"
 }
