--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -65,169 +65,5 @@
 
   "modmenu.nameTranslation.extshape": "扩展方块形状",
 
-  "options.extshape.addToVanillaGroups.blockus": "请注意：如要在创造模式物品栏中找到Blockus模组中的扩展形状的方块，你需要启用“添加至原版物品组”。这些方块只会显示在Blockus的物品组中。Blockus方块的扩展形状的方块没有专用物品组。",
-
-  "tag.block.extshape.pickaxe_unmineable": "镐不可挖掘",
-
-  "tag.block.extshape.woolen_blocks": "羊毛方块",
-  "tag.block.extshape.wooden_blocks": "木制方块",
-  "tag.block.extshape.log_blocks": "原木方块",
-
-  "tag.block.extshape.log_stairs": "原木楼梯",
-  "tag.block.extshape.woolen_stairs": "羊毛楼梯",
-  "tag.block.extshape.concrete_stairs": "混凝土楼梯",
-  "tag.block.extshape.terracotta_stairs": "陶瓦楼梯",
-  "tag.block.extshape.stained_terracotta_stairs": "染色陶瓦楼梯",
-
-  "tag.block.extshape.log_slabs": "原木台阶",
-  "tag.block.extshape.woolen_slabs": "羊毛台阶",
-  "tag.block.extshape.concrete_slabs": "混凝土台阶",
-  "tag.block.extshape.terracotta_slabs": "陶瓦台阶",
-  "tag.block.extshape.stained_terracotta_slabs": "染色陶瓦台阶",
-  "tag.block.extshape.glazed_terracotta_slabs": "带釉陶瓦台阶",
-
-  "tag.block.extshape.log_fences": "原木栅栏",
-  "tag.block.extshape.woolen_fences": "羊毛栅栏",
-  "tag.block.extshape.concrete_fences": "混凝土栅栏",
-  "tag.block.extshape.terracotta_fences": "陶瓦栅栏",
-  "tag.block.extshape.stained_terracotta_fences": "染色陶瓦栅栏",
-
-  "tag.block.extshape.log_fence_gates": "原木栅栏门",
-  "tag.block.extshape.woolen_fence_gates": "羊毛栅栏门",
-  "tag.block.extshape.concrete_fence_gates": "混凝土栅栏门",
-  "tag.block.extshape.terracotta_fence_gates": "陶瓦栅栏门",
-  "tag.block.extshape.stained_terracotta_fence_gates": "染色陶瓦栅栏门",
-
-  "tag.block.extshape.wooden_walls": "木制墙",
-  "tag.block.extshape.log_walls": "原木墙",
-  "tag.block.extshape.woolen_walls": "羊毛墙",
-  "tag.block.extshape.concrete_walls": "混凝土墙",
-  "tag.block.extshape.terracotta_walls": "陶瓦墙",
-  "tag.block.extshape.stained_terracotta_walls": "染色陶瓦墙",
-
-  "tag.block.extshape.log_buttons": "原木按钮",
-  "tag.block.extshape.woolen_buttons": "羊毛按钮",
-  "tag.block.extshape.concrete_buttons": "混凝土按钮",
-  "tag.block.extshape.terracotta_buttons": "陶瓦按钮",
-  "tag.block.extshape.stained_terracotta_buttons": "染色陶瓦按钮",
-
-  "tag.block.extshape.log_pressure_plates": "原木压力板",
-  "tag.block.extshape.woolen_pressure_plates": "羊毛压力板",
-  "tag.block.extshape.concrete_pressure_plates": "混凝土压力板",
-  "tag.block.extshape.terracotta_pressure_plates": "陶瓦压力板",
-  "tag.block.extshape.stained_terracotta_pressure_plates": "染色陶瓦压力板",
-
-  "tag.block.extshape.vertical_slabs": "竖直台阶",
-  "tag.block.extshape.wooden_vertical_slabs": "竖直木制台阶",
-  "tag.block.extshape.log_vertical_slabs": "竖直原木台阶",
-  "tag.block.extshape.woolen_vertical_slabs": "竖直羊毛台阶",
-  "tag.block.extshape.concrete_vertical_slabs": "竖直混凝土台阶",
-  "tag.block.extshape.terracotta_vertical_slabs": "竖直陶瓦台阶",
-  "tag.block.extshape.stained_terracotta_vertical_slabs": "竖直染色陶瓦台阶",
-
-  "tag.block.extshape.quarter_pieces": "横条",
-  "tag.block.extshape.wooden_quarter_pieces": "木制横条",
-  "tag.block.extshape.log_quarter_pieces": "原木横条",
-  "tag.block.extshape.woolen_quarter_pieces": "羊毛横条",
-  "tag.block.extshape.concrete_quarter_pieces": "混凝土横条",
-  "tag.block.extshape.terracotta_quarter_pieces": "陶瓦横条",
-  "tag.block.extshape.stained_terracotta_quarter_pieces": "染色陶瓦横条",
-
-  "tag.block.extshape.vertical_stairs": "竖直楼梯",
-  "tag.block.extshape.wooden_vertical_stairs": "木制楼梯",
-  "tag.block.extshape.log_vertical_stairs": "竖直原木楼梯",
-  "tag.block.extshape.woolen_vertical_stairs": "竖直羊毛楼梯",
-  "tag.block.extshape.concrete_vertical_stairs": "竖直混凝土楼梯",
-  "tag.block.extshape.terracotta_vertical_stairs": "竖直陶瓦楼梯",
-  "tag.block.extshape.stained_terracotta_vertical_stairs": "竖直染色陶瓦楼梯",
-
-  "tag.block.extshape.vertical_quarter_pieces": "纵条",
-  "tag.block.extshape.wooden_vertical_quarter_pieces": "木制纵条",
-  "tag.block.extshape.log_vertical_quarter_pieces": "原木纵条",
-  "tag.block.extshape.woolen_vertical_quarter_pieces": "羊毛纵条",
-  "tag.block.extshape.concrete_vertical_quarter_pieces": "混凝土纵条",
-  "tag.block.extshape.terracotta_vertical_quarter_pieces": "陶瓦纵条",
-  "tag.block.extshape.stained_terracotta_vertical_quarter_pieces": "染色陶瓦纵条",
-
-  "tag.item.extshape.woolen_blocks": "羊毛方块",
-  "tag.item.extshape.wooden_blocks": "木制方块",
-  "tag.item.extshape.log_blocks": "原木方块",
-
-  "tag.item.extshape.log_stairs": "原木楼梯",
-  "tag.item.extshape.woolen_stairs": "羊毛楼梯",
-  "tag.item.extshape.concrete_stairs": "混凝土楼梯",
-  "tag.item.extshape.terracotta_stairs": "陶瓦楼梯",
-  "tag.item.extshape.stained_terracotta_stairs": "染色陶瓦楼梯",
-
-  "tag.item.extshape.log_slabs": "原木台阶",
-  "tag.item.extshape.woolen_slabs": "羊毛台阶",
-  "tag.item.extshape.concrete_slabs": "混凝土台阶",
-  "tag.item.extshape.terracotta_slabs": "陶瓦台阶",
-  "tag.item.extshape.stained_terracotta_slabs": "染色陶瓦台阶",
-  "tag.item.extshape.glazed_terracotta_slabs": "带釉陶瓦台阶",
-
-  "tag.item.extshape.log_fences": "原木栅栏",
-  "tag.item.extshape.woolen_fences": "羊毛栅栏",
-  "tag.item.extshape.concrete_fences": "混凝土栅栏",
-  "tag.item.extshape.terracotta_fences": "陶瓦栅栏",
-  "tag.item.extshape.stained_terracotta_fences": "染色陶瓦栅栏",
-
-  "tag.item.extshape.log_fence_gates": "原木栅栏门",
-  "tag.item.extshape.woolen_fence_gates": "羊毛栅栏门",
-  "tag.item.extshape.concrete_fence_gates": "混凝土栅栏门",
-  "tag.item.extshape.terracotta_fence_gates": "陶瓦栅栏门",
-  "tag.item.extshape.stained_terracotta_fence_gates": "染色陶瓦栅栏门",
-
-  "tag.item.extshape.wooden_walls": "木制墙",
-  "tag.item.extshape.log_walls": "原木墙",
-  "tag.item.extshape.woolen_walls": "羊毛墙",
-  "tag.item.extshape.concrete_walls": "混凝土墙",
-  "tag.item.extshape.terracotta_walls": "陶瓦墙",
-  "tag.item.extshape.stained_terracotta_walls": "染色陶瓦墙",
-
-  "tag.item.extshape.log_buttons": "原木按钮",
-  "tag.item.extshape.woolen_buttons": "羊毛按钮",
-  "tag.item.extshape.concrete_buttons": "混凝土按钮",
-  "tag.item.extshape.terracotta_buttons": "陶瓦按钮",
-  "tag.item.extshape.stained_terracotta_buttons": "染色陶瓦按钮",
-
-  "tag.item.extshape.log_pressure_plates": "原木压力板",
-  "tag.item.extshape.woolen_pressure_plates": "羊毛压力板",
-  "tag.item.extshape.concrete_pressure_plates": "混凝土压力板",
-  "tag.item.extshape.terracotta_pressure_plates": "陶瓦压力板",
-  "tag.item.extshape.stained_terracotta_pressure_plates": "染色陶瓦压力板",
-
-  "tag.item.extshape.vertical_slabs": "竖直台阶",
-  "tag.item.extshape.wooden_vertical_slabs": "竖直木制台阶",
-  "tag.item.extshape.log_vertical_slabs": "竖直原木台阶",
-  "tag.item.extshape.woolen_vertical_slabs": "竖直羊毛台阶",
-  "tag.item.extshape.concrete_vertical_slabs": "竖直混凝土台阶",
-  "tag.item.extshape.terracotta_vertical_slabs": "竖直陶瓦台阶",
-  "tag.item.extshape.stained_terracotta_vertical_slabs": "竖直染色陶瓦台阶",
-
-  "tag.item.extshape.quarter_pieces": "横条",
-  "tag.item.extshape.wooden_quarter_pieces": "木制横条",
-  "tag.item.extshape.log_quarter_pieces": "原木横条",
-  "tag.item.extshape.woolen_quarter_pieces": "羊毛横条",
-  "tag.item.extshape.concrete_quarter_pieces": "混凝土横条",
-  "tag.item.extshape.terracotta_quarter_pieces": "陶瓦横条",
-  "tag.item.extshape.stained_terracotta_quarter_pieces": "染色陶瓦横条",
-
-  "tag.item.extshape.vertical_stairs": "竖直楼梯",
-  "tag.item.extshape.wooden_vertical_stairs": "木制楼梯",
-  "tag.item.extshape.log_vertical_stairs": "竖直原木楼梯",
-  "tag.item.extshape.woolen_vertical_stairs": "竖直羊毛楼梯",
-  "tag.item.extshape.concrete_vertical_stairs": "竖直混凝土楼梯",
-  "tag.item.extshape.terracotta_vertical_stairs": "竖直陶瓦楼梯",
-  "tag.item.extshape.stained_terracotta_vertical_stairs": "竖直染色陶瓦楼梯",
-
-  "tag.item.extshape.vertical_quarter_pieces": "纵条",
-  "tag.item.extshape.wooden_vertical_quarter_pieces": "木制纵条",
-  "tag.item.extshape.log_vertical_quarter_pieces": "原木纵条",
-  "tag.item.extshape.woolen_vertical_quarter_pieces": "羊毛纵条",
-  "tag.item.extshape.concrete_vertical_quarter_pieces": "混凝土纵条",
-  "tag.item.extshape.terracotta_vertical_quarter_pieces": "陶瓦纵条",
-  "tag.item.extshape.stained_terracotta_vertical_quarter_pieces": "染色陶瓦纵条",
-
-  "tags.block.extshape.snow": "雪"
+  "options.extshape.addToVanillaGroups.blockus": "请注意：如要在创造模式物品栏中找到Blockus模组中的扩展形状的方块，你需要启用“添加至原版物品组”。这些方块只会显示在Blockus的物品组中。Blockus方块的扩展形状的方块没有专用物品组。"
 }
