更新至 3.0.0-beta.7 修复内置资源包没有翻译

--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -50,5 +50,7 @@
 
   "modmenu.nameTranslation.extshape": "Extended Block Shapes",
 
-  "options.extshape.addToVanillaGroups.blockus": "Please note: to find the extended shapes of blocks in Blockus mod in the creative inventory, you have to enable \"Add To Vanilla Groups\". The blocks only display in item groups of Blockus. There are no specific groups for extended shapes of blocks in Blockus mod."
+  "options.extshape.addToVanillaGroups.blockus": "Please note: to find the extended shapes of blocks in Blockus mod in the creative inventory, you have to enable \"Add To Vanilla Groups\". The blocks only display in item groups of Blockus. There are no specific groups for extended shapes of blocks in Blockus mod.",
+
+  "resourcePack.extshape.recipe_tweak.name": "Recipe Tweak (to fix recipe conflict between the mod and vanilla)"
 }
