--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -50,5 +50,7 @@
 
   "modmenu.nameTranslation.extshape": "扩展方块形状",
 
-  "options.extshape.addToVanillaGroups.blockus": "请注意：如要在创造模式物品栏中找到Blockus模组中的扩展形状的方块，你需要启用“添加至原版物品组”。这些方块只会显示在Blockus的物品组中。Blockus方块的扩展形状的方块没有专用物品组。"
+  "options.extshape.addToVanillaGroups.blockus": "请注意：如要在创造模式物品栏中找到Blockus模组中的扩展形状的方块，你需要启用“添加至原版物品组”。这些方块只会显示在Blockus的物品组中。Blockus方块的扩展形状的方块没有专用物品组。",
+
+  "resourcePack.extshape.recipe_tweak.name": "配方调整（修复模组与原版之间的配方冲突）"
 }
