--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -50,5 +50,7 @@
 
   "modmenu.nameTranslation.extshape": "擴展方塊形狀",
 
-  "options.extshape.addToVanillaGroups.blockus": "請注意：如要在創造模式中找到 Blockus 模組中的擴展形狀的方塊，你需要啟用「添加至原版物品組」。這些方塊只會顯示在 Blockus 的物品組中。Blockus 方塊的擴展形狀的方塊沒有專用物品組。"
+  "options.extshape.addToVanillaGroups.blockus": "請注意：如要在創造模式中找到 Blockus 模組中的擴展形狀的方塊，你需要啟用「添加至原版物品組」。這些方塊只會顯示在 Blockus 的物品組中。Blockus 方塊的擴展形狀的方塊沒有專用物品組。",
+
+  "resourcePack.extshape.recipe_tweak.name": "配方調整（修復模組與原版之間的配方衝突）"
 }
