--- a/with_blockus/src/main/resources/assets/extshape_blockus/lang/en_us.json
+++ b/with_blockus/src/main/resources/assets/extshape_blockus/lang/en_us.json
@@ -1,5 +1,4 @@
 {
   "modmenu.nameTranslation.extshape_blockus": "Extended Block Shapes - Blockus",
-  "modmenu.descriptionTranslation.extshape_blockus": "Adds Extended Block Shapes for Blockus mod!",
-  "block.extshape_blockus.deprecated": "Deprecated block. Please replace with another block with the same name via crafting."
+  "modmenu.descriptionTranslation.extshape_blockus": "Adds Extended Block Shapes for Blockus mod!"
 }
