--- a/with_blockus/src/main/resources/assets/extshape_blockus/lang/zh_hk.json
+++ b/with_blockus/src/main/resources/assets/extshape_blockus/lang/zh_hk.json
@@ -1,5 +1,4 @@
 {
   "modmenu.nameTranslation.extshape_blockus": "擴展方塊形狀 - Blockus",
-  "modmenu.descriptionTranslation.extshape_blockus": "為 Blockus 模組添加擴展方塊形狀！",
-  "block.extshape_blockus.deprecated": "已棄用嘅方塊。請通過合成將其替換為有相同名稱嘅另一個方塊。"
+  "modmenu.descriptionTranslation.extshape_blockus": "為 Blockus 模組添加擴展方塊形狀！"
 }
